--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,12 @@
 <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/Clinic2/themetechmount.com/html/delmont/css/main.css"/>
 
 <!-- responsive -->
+
 <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/Clinic2/themetechmount.com/html/delmont/css/responsive.css"/>
+
+<link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/delmont/css/responsive.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
 
 
