Update page title to reflect new branding

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="Delmont &#8211; Medical, Health and Hospital Html Template" />
 <meta name="author" content="https://www.themetechmount.com/" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2" />
-<title>Delmont &#8211; Medical, Health and Hospital Html Template</title>
+<title>Medinet &#8211; FPT Aptech</title>
 
 <!-- favicon icon -->
 <link rel="shortcut icon" href="%PUBLIC_URL%/delmont/images/favicon.png" />
